# Cpp-RestAPI

./: BaseRouter.cpp  BaseRouter.h  CMakeLists.txt  README.md
Includes/Rest/: Rest.h  Router.h
Lib/ClassBase/Sources/: AClass.cpp
Lib/Json/Includes/: Json.h
Lib/Logger/Includes/: Channel.h  Log.h
Models/: Comments.h  RestRouting.h
RestServer/: CMakeLists.txt
RestServer/Includes/Rest/: Rest.h
RestServer/Lib/ClassBase/: CMakeLists.txt  README.md
RestServer/Lib/ClassBase/Includes/: AClass.h  IMain.h
RestServer/Lib/Logger/Includes/: DateTime.h
RestServer/Lib/Logger/Sources/: Manager.cpp
RestServer/Lib/MongoLink/: CMakeLists.txt
RestServer/Lib/MongoLink/Includes/: ACollection.h  AModel.h  Database.h  ICollection.h  IModel.h
RestServer/Lib/MongoLink/Sources/: ACollection.cpp  AModel.cpp  Database.cpp
RestServer/Lib/RestRouter/: CMakeLists.txt
RestServer/Lib/RestRouter/Includes/: ARouter.h  IRouter.h
RestServer/Lib/RestRouter/Sources/: ARouter.cpp
RestServer/Lib/RestValidator/: CMakeLists.txt
RestServer/Lib/RestValidator/Includes/: Parameter.h  Validator.h
RestServer/Lib/RestValidator/Sources/: Validator.cpp
RestServer/Lib/SharedLib/: CMakeLists.txt
RestServer/Lib/SharedLib/Includes/: SharedLib.h
RestServer/Lib/SharedLib/Sources/: SharedLib.cpp
RestServer/Sources/: MainClass.cpp  main.cpp
RestServer/Sources/Rest/: Rest.cpp
RestServer/cmake/: safeguards.cmake
Routes/: ApiRouter.h
Routes/Comments/: CommentsController.h  CommentsRouter.h  CommentsValidator.h
Routes/Tests/: TestsRouter.h
Routes/Tests/RestRouting/: RestRoutingController.h  RestRoutingRouter.h  RestRoutingValidator.h
Routes/Tests/Validator/: ValidatorController.h  ValidatorRouter.h  ValidatorValidator.h
Sources/: MainClass.cpp
Sources/Rest/: Rest.cpp  Router.cpp
